# dataguard

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Cargo.toml.bak  README.md  REFACTOR_SUMMARY.md  benchmark.py  example.toml  pyproject.toml
.github/workflows/: CI.yml
benches/: monotonicaly_bench.rs  string_length_check_bench.rs
benchmark/: benchmark.py
crates/dataguard-cli/: Cargo.toml  example.toml  test_error.toml
crates/dataguard-cli/src/: constructor.rs  errors.rs  main.rs  parser.rs  rules_doc.rs  runner.rs  writer.rs
crates/dataguard-core/: Cargo.toml
crates/dataguard-core/benches/: monotonicaly_bench.rs  string_length_check_bench.rs  unicity_bench.rs
crates/dataguard-core/examples/: auto_streaming_demo.rs  streaming_test.rs
crates/dataguard-core/src/: column.rs  errors.rs  lib.rs  reader.rs  report.rs  results.rs  types.rs
crates/dataguard-core/src/columns/: columns_test.rs  date_builder.rs  mod.rs  numeric_builder.rs  relation_builder.rs  string_builder.rs
crates/dataguard-core/src/compiler/: mod.rs  tests.rs
crates/dataguard-core/src/engine/: accumulator.rs  mod.rs  stats_accumulator.rs  tests.rs  unicity_accumulator.rs  validation_engine.rs  validaton_engine.rs
crates/dataguard-core/src/readers/: config.rs  csv_reader.rs  mod.rs  parquet_reader.rs  reader.rs  unified_reader.rs.backup
crates/dataguard-core/src/rules/: date.rs  generic.rs  mod.rs  numeric.rs  relations.rs  string.rs
crates/dataguard-core/src/tables/: csv_table.rs  mod.rs  parquet_table.rs
crates/dataguard-core/src/utils/: date_parser.rs  hasher.rs  mod.rs  operator.rs
crates/dataguard-core/src/validator/: executable_column.rs  mod.rs  validation.rs
crates/dataguard-core/tests/: test_csv_table.rs  test_generic_rules.rs  test_numeric_rules.rs  test_parquet_table.rs  test_string_rules.rs  test_validator.rs
crates/dataguard-py/: Cargo.toml  README.md  pyproject.toml
crates/dataguard-py/python/dataguard/: __init__.py  guard.py
crates/dataguard-py/src/: lib.rs
crates/dataguard-py/src/columns/: date_builder.rs  float_builder.rs  integer_builder.rs  mod.rs  string_builder.rs
crates/dataguard-py/src/relations/: mod.rs
crates/dataguard-py/src/rules/: mod.rs
crates/dataguard-py/src/tables/: csv_table.rs  mod.rs  parquet_table.rs
crates/dataguard-py/src/validator/: mod.rs  validation.rs
crates/dataguard-py/tests/: test_generic_rules.py  test_integer_rules.py  test_string_rules.py
crates/dataguard-reports/: Cargo.toml
crates/dataguard-reports/src/: lib.rs
crates/dataguard-reports/src/formatters/: json.rs  mod.rs  stdout.rs
crates/dataguard-reports/src/utils/: numbers.rs
dataguard-core/: Cargo.toml
dataguard-core/src/: column.rs  lib.rs  reader.rs
dataguard-core/src/rules/: mod.rs
dataguard-core/src/validator/: executable_column.rs  mod.rs  validation.rs
dataguard-core/tests/: test_generic_rules.rs  test_numeric_rules.rs  test_string_rules.rs  test_validator.rs
dataguard-py/: Cargo.toml
dataguard-py/src/: lib.rs
dataguard-py/src/columns/: string_column.rs
dataguard-py/src/rules/: core.rs  generic_rules.rs  mod.rs
dataguard-py/src/validator/: mod.rs  validation.rs
docs/: config_flow.md  rules_dev.md
examples/: README.md  config.toml  validate_products.py  validate_products.rs
python/dataguard/: __init__.py  guard.py
src/: column_builder.rs  errors.rs  lib.rs  reader.rs  report.rs  rules.rs  types.rs
src/columns/: float_column.rs  integer_column.rs  mod.rs  string_column.rs
src/rules/: core.rs  generic_rules.rs  logic.rs  mod.rs  numeric_rules.rs  string_rules.rs
src/validator/: executable_column.rs  validation.rs
tests/: test_generic_rules.py  test_integer_rules.py  test_string_rules.py
