[workspace]
members = ["crates/dataguard-cli","crates/dataguard-core", "crates/dataguard-py", "crates/dataguard-reports"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Arrow ecosystem
arrow = "57.1.0"
arrow-array = "57.1.0"
arrow-ord = "57.1.0"
arrow-string = "57.1.0"
thiserror = "2.0.17"
rayon = "1.11.0"
regex = "1.12.2"
dashmap = "5.5"
once_cell = "1.21.3"
num-traits = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
pyo3 = { version = "0.27.0", features = ["extension-module"] }
tempfile = "3.0"
criterion = "0.7.0"
[workspace.lints.clippy]
too_many_arguments = "allow"
