[package]
name = "dataguard-core"
version.workspace = true
edition = "2021"

[lib]
name = "dataguard_core"

[dependencies]
arrow = "57.0.0"
arrow-string = "57.0.0"
arrow-ord = "57.1.0"
arrow-array = "57.1.0"
thiserror = "2.0.17"
rayon = "1.11.0"
regex = "1.12.2"
prettytable-rs = "0.10"
dashmap = "5.5"
once_cell = "1.21.3"
num-traits = "0.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.7.0"

[lints.clippy]
too_many_arguments = "allow"
