[package]
name = "dataguard-cli"
version.workspace = true
edition.workspace = true

[dependencies]
dataguard-core = { path = "../dataguard-core" }
dataguard-reports = { path = "../dataguard-reports" }
clap = { version = "4.5.53", features = ["derive"] }
serde = { workspace = true }
tempfile = { workspace = true }
toml = "0.9.8"
thiserror = { workspace = true }
anyhow = "1.0.100"
notify = "8.2.0"

[lints]
workspace = true
