[package]
name = "dataguard-core"
version.workspace = true
edition.workspace = true

[lib]
name = "dataguard_core"

[dependencies]
arrow = { workspace = true }
arrow-string = { workspace = true }
arrow-ord = { workspace = true }
arrow-array = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
prettytable-rs = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
num-traits = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[lints]
workspace = true
