[package]
name = "dataguard-core"
version.workspace = true
edition.workspace = true

[lib]
name = "dataguard_core"

[dependencies]
arrow = { workspace = true }
arrow-string = { workspace = true }
arrow-ord = { workspace = true }
arrow-array = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
num-traits = { workspace = true }
xxhash-rust = { workspace = true }
parquet = "57.1"
crossbeam = "0.8.4"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "monotonicaly_bench"
harness = false
path = "benches/monotonicaly_bench.rs"

[[bench]]
name = "string_length_check_bench"
harness = false
path = "benches/string_length_check_bench.rs"

[[bench]]
name = "unicity_bench"
harness = false
path = "benches/unicity_bench.rs"

[lints]
workspace = true

